--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
     font-family: 'Work Sans', sans-serif;
     text-align: justify;
-    font-size: 1.08rem;
+    font-size: 1.05rem;
 }
 
 @font-face {
@@ -30,93 +30,118 @@ a {
 
 a:link,
 a:visited,
-a:focus {
-    background: #ffffff;
-}
-
-a:hover {
-    background: #a8a8a8;
-}
+a:hover {}
 
 a:active {
     background: red;
-    color: white;
 }
 
 .body {
     height: auto;
     background-image: url(../img/logo1.jpg);
-    background-size: 50rem;
+    background-size: contain;
 }
-
-.body-index{
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(4,1fr);
-}
-
 
 /* Header */
+
 .header {
     background-color: #ff1e00;
-    display: flex;
     padding: 1rem;
-    justify-content: space-between;
-    align-items: center;
 }
 
-.header__titulo {
+.marca {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+}
 
-    font-size: 4rem;
+.marca__titulo {
+    font-size: 1.5rem;
     color: #15151e;
     font-family: 'Formula', sans-serif;
-
 }
-
 
 .nav__lista {
     display: flex;
-    text-decoration: none;
-    gap: 15px;
+    justify-content: space-around;
+    gap: 0.3rem;
+    padding: 2rem;
 }
 
-/* Portada */
+.nav__item {
+    border: solid black;
+    padding: 1px 2px;
+    border-radius: 15px;
+    background-color: #fdfffc;
+}
 
+@media (min-width: 1200px) {
+    .header {
+        background-color: #ff1e00;
+        display: flex;
+        padding: 1rem;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .marca__titulo {
+        font-size: 4rem;
+    }
+}
+
+/* PORTADA */
 .portada {
-    height: 55vh;
-    font-size: 2rem;
+    height: 50vh;
     background-image: url(../img/portada2.jpg);
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-/* Seccion Info */
+/* INFORMACION */
 
-.info {
-    padding: 1rem;
-}
 
 .info__titulo {
     font-size: 2.5rem;
+    font-family: 'Formula', sans-serif;
     text-decoration: underline;
     text-align: center;
     color: #ff1e00
 }
 
 .info__parrafo {
-    font-size: 1.5rem;
-    justify-content: center;
+    font-size: 1rem;
     color: #fdfffc;
     background-color: #15151e;
+    justify-content: center;
+    padding: 1rem;
 }
 
 .info__video {
-    margin: 0 auto;
-    width: 1300px;
+    margin: 5 auto;
+    width: 100%;
     display: block;
+    justify-content: center;
 }
 
 /* Seccion Noticias */
+
+.noticia__titu--principal {
+    padding: 1rem;
+    font-size: 2rem;
+    font-family: 'Formula', sans-serif;
+    text-decoration: underline;
+    text-align: center;
+    color: #ff1e00
+}
+
+/* Noticia item */
 
 .noticia {
     padding: 1rem;
@@ -133,103 +158,104 @@ a:active {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    gap: 100px;
+    gap: 55px;
+    margin: 1rem;
+    justify-content: center;
 }
 
 .noticia__item {
     background-color: #fdfffc;
     width: 300px;
     height: 350px;
-    border: 5px solid red;
-    padding: 5px 4px 5px 0px;
-    overflow: hidden;
-    margin: 15px;
+    border: 3px inset red;
+    box-shadow: 0px 2px 8px white;
+    padding: 0.5rem;
+    border-radius: 25px;
 }
 
-/* footer */
+.noticia__img {
+    width: 100%;
+}
 
-.footer {
+@media (min-width: 1200px) {
+    .noticia__box {
+        height: 150vh;
+        display: grid;
+        grid-template-columns: 20% 20% 20% 20%;
+        grid-template-rows: 30% 30% 30% 30%
+    }
+
+    .noticia__item {
+        width: auto;
+        height: auto;
+    }
+
+    .noticia__img {
+        width: 100%;
+        height: 50%;
+    }
+
+    .primer-noticia {
+        grid-column: 1 / 4;
+        grid-row: 1 / 2;
+    }
+
+    .noticia__img1 {
+        height: 75%;
+    }
+
+    .segunda-noticia {
+        grid-column: 1 / 4;
+        grid-row: 2 / 3;
+    }
+
+    .noticia__img2 {
+        height: 75%;
+    }
+}
+
+.footer{
     background-color: #ff1e00;
     display: flex;
-    padding: 1rem;
-    justify-content: space-between;
+    flex-direction: column;
+    align-items: center;
+    bottom: 0;
+}
+.footer-titu{
+    font-family: 'Formula', sans-serif;
+    font-size: 1.5rem;
+}
+
+.seccion__contacto{
+    display: flex;
+    flex-direction: column;
     align-items: center;
 }
 
-.footer__titu {
-    font-size: 2rem;
-    color: #15151e;
-    font-family: 'Formula', sans-serif;
-}
-
-.footer__lista {
-    display: flex;
-    text-decoration: none;
-    gap: 15px;
-}
-
-
-/* PAGE TABLA POSICIONES */
-
-
-
-.portada__tabla {
-    height: 65vh;
-    font-size: 2rem;
-    background-image: url(../img/portada-posicion2.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-.tabla__pos {
-    margin: 150px auto;
-    width: 600px;
-}
-
-.tabla__titu--principal {
-    font-size: 2.5rem;
-    text-align: center;
-    text-decoration: underline;
-    color: #ff1e00
-}
-
-.tabla__titu--secundario {
-    text-align: center;
-    font-size: 2rem;
-    padding-top: 10rem;
-    color: #ff1e00
-}
-
-.tabla {
-    margin: 150px auto;
-    width: 600px;
-    font-size: 2rem;
+.footer__contacto{
+    border: solid black;
+    padding: 1px 2px;
+    border-radius: 15px;
     background-color: #fdfffc;
-    text-align: left;
 }
 
-th,
-td {
-    padding: 20px;
-}
-
-.encabezado {
-    background-color: #ff1e00;
-}
-
-tr:nth-child(even) {
-    background-color: #ddd;
+.footer-redes a{
+    font-size: 2.5;
 }
 
 
 /* PAGE DE ESCUDERIAS */
 
 .portada__escuderias {
-    height: 86vh;
-    font-size: 2rem;
-    background-image: url(../img/escuderias-recorte.jpg);
+    height: 50vh;
+    background-image: url(../img/portada2.jpg);
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .escuderia__titu--principal {
@@ -248,106 +274,40 @@ tr:nth-child(even) {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    gap: 100px;
+    gap: 55px;
+    margin: 1rem;
+    justify-content: center;
 }
 
 .escuderia__item {
-    background-color: #6c757d;
-    width: 2000px;
-    height: 350px;
-    border: 5px solid red;
-    padding: 5px 4px 5px 0px;
-    overflow: hidden;
-    margin: 15px;
-}
-
-/* Seccion pilotos */
-
-.portada__pilotos {
-    height: 55vh;
-    font-size: 2rem;
-    background-image: url(../img/portada-pilotos.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-.pilotos__titu--principal {
-    font-size: 2.5rem;
-    text-align: center;
-    text-decoration: underline;
-    color: #ff1e00
-}
-
-.pilot {
-    padding: 1rem;
-
-}
-
-.pilotos__box {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    gap: 100px;
-}
-
-.pilotos__item {
-    background-color: #6c757d;
-    width: 280px;
-    height: 400px;
-    border: 5px solid red;
-    padding: 5px 4px 5px 0px;
-    overflow: hidden;
-    margin: 15px;
-    color: #fdfffc;
-}
-
-
-/* Seccion contacto */
-.contacto__titu--principal {
-    font-size: 2.5rem;
-    text-align: center;
-    text-decoration: underline;
-    color: #ff1e00
-}
-
-.cont {
-    padding: 1rem;
-
-}
-
-.contacto__descrip {
-    font-size: 2rem;
-    text-align: center;
-    color: #fdfffc;
-    padding: 5rem;
-}
-
-
-form {
-    margin: 0 auto;
-    background-color: #343a40;
+    background-color: #fdfffc;
     width: 800px;
-    padding: 1rem;
-    border: 1px solid #CCC;
-    border-radius: 1rem;
+    height: 500px;
+    border: 3px inset red;
+    box-shadow: 0px 2px 8px white;
+    padding: 0.5rem;
+    border-radius: 25px;
 }
 
-label {
-    display: inline-block;
-    width: 200px;
-    text-align: right;
-    padding: 1rem;
-    color: #ff1e00;
+.escuderia__logo{
+    width: 45%;
+}
+.escuderia__auto{
+    width: 50%;
 }
 
-input,
-textarea {
-    font: 'Work Sans', sans-serif;
-    width: 300px;
-    box-sizing: border-box;
-    border: 1px solid #999
-}
+@media (min-width: 1200px) {
+    .escuderia__box{
+        height: 200vh;
+        display: grid;
+        overflow: auto;
 
-.enviar-info {
-    padding-left: 90px;
+        grid-template-columns: 45% 45% ;
+        grid-template-rows: 30% 30% 30% 30% 30%
+        
+    }
+    .escuderia__item{
+        width: auto;
+        height: auto;
+    }
 }
