--- a/css/style.css
+++ b/css/style.css
@@ -311,3 +311,146 @@ a:active {
         height: auto;
     }
 }
+
+/* PAGE TABLA POSICIONES */
+
+
+
+.portada__tabla {
+    height: 65vh;
+    font-size: 2rem;
+    background-image: url(../img/portada-posicion2.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.tabla__pos {
+    margin: 150px auto;
+    width: 600px;
+}
+
+.tabla__titu--principal {
+    font-size: 2.5rem;
+    text-align: center;
+    text-decoration: underline;
+    color: #ff1e00
+}
+
+.tabla__titu--secundario {
+    text-align: center;
+    font-size: 2rem;
+    padding-top: 10rem;
+    color: #ff1e00
+}
+
+.tabla {
+    margin: 150px auto;
+    width: 600px;
+    font-size: 2rem;
+    background-color: #fdfffc;
+    text-align: left;
+}
+
+th,
+td {
+    padding: 20px;
+}
+
+.encabezado {
+    background-color: #ff1e00;
+}
+
+tr:nth-child(even) {
+    background-color: #ddd;
+}
+
+/* Seccion pilotos */
+
+.portada__pilotos {
+    height: 55vh;
+    font-size: 2rem;
+    background-image: url(../img/portada-pilotos.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.pilotos__titu--principal {
+    font-size: 2.5rem;
+    text-align: center;
+    text-decoration: underline;
+    color: #ff1e00
+}
+
+.pilot {
+    padding: 1rem;
+
+}
+
+.pilotos__box {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 100px;
+}
+
+.pilotos__item {
+    background-color: #6c757d;
+    width: 280px;
+    height: 400px;
+    border: 5px solid red;
+    padding: 5px 4px 5px 0px;
+    overflow: hidden;
+    margin: 15px;
+    color: #fdfffc;
+}
+
+
+/* Seccion contacto */
+.contacto__titu--principal {
+    font-size: 2.5rem;
+    text-align: center;
+    text-decoration: underline;
+    color: #ff1e00
+}
+
+.cont {
+    padding: 1rem;
+
+}
+
+.contacto__descrip {
+    font-size: 2rem;
+    text-align: center;
+    color: #fdfffc;
+    padding: 5rem;
+}
+
+
+form {
+    margin: 0 auto;
+    background-color: #343a40;
+    width: 800px;
+    padding: 1rem;
+    border: 1px solid #CCC;
+    border-radius: 1rem;
+}
+
+label {
+    display: inline-block;
+    width: 200px;
+    text-align: right;
+    padding: 1rem;
+    color: #ff1e00;
+}
+
+input,
+textarea {
+    font: 'Work Sans', sans-serif;
+    width: 300px;
+    box-sizing: border-box;
+    border: 1px solid #999
+}
+
+.enviar-info {
+    padding-left: 90px;
+}
