--- a/css/style.css
+++ b/css/style.css
@@ -201,7 +201,8 @@ a:active {
     }
 
     .noticia__img1 {
-        height: 75%;
+        width: 70%;
+        height: 80%;
     }
 
     .segunda-noticia {
@@ -210,7 +211,8 @@ a:active {
     }
 
     .noticia__img2 {
-        height: 75%;
+        width: 70%;
+        height: 80%;
     }
 }
 
@@ -261,6 +263,7 @@ a:active {
 .escuderia__titu--principal {
     font-size: 2.5rem;
     text-align: center;
+    font-family: 'Formula', sans-serif;
     text-decoration: underline;
     color: #ff1e00
 }
