--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -1,9 +1,9 @@
 .info__titulo {
     font-size: 2.5rem;
-    font-family: 'Formula', sans-serif;
+    font-family: $fuente-f1;
     text-decoration: underline;
     text-align: center;
-    color: #ff1e00
+    color: $color-f1
 }
 
 .info__parrafo {
