--- a/scss/pages/_pilotos.scss
+++ b/scss/pages/_pilotos.scss
@@ -2,8 +2,8 @@
     font-size: 2.5rem;
     text-align: center;
     text-decoration: underline;
-    color: #ff1e00;
-    font-family: 'Formula', sans-serif;
+    color: $color-f1;
+    font-family: $fuente-f1;
 }
 
 .pilot {
