--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -1,11 +1,11 @@
 .footer {
-    background-color: #ff1e00;
+    background-color: $color-f1;
     display: flex;
     flex-direction: column;
     align-items: center;
     bottom: 0;
     &-titu{
-        font-family: 'Formula', sans-serif;
+        font-family: $fuente-f1;
     font-size: 1.5rem;
     }
 }
