--- a/scss/components/_formulario.scss
+++ b/scss/components/_formulario.scss
@@ -12,7 +12,7 @@ label {
     display: inline-block;
     width: 200px;
     padding: 1rem;
-    color: #ff1e00;
+    color: $color-f1;
 }
 
 input,
