--- a/scss/components/_media.scss
+++ b/scss/components/_media.scss
@@ -1,6 +1,6 @@
 @media (min-width: 1200px) {
     .header {
-        background-color: #ff1e00;
+        background-color: $color-f1;
         display: flex;
         padding: 1rem;
         justify-content: space-between;
