--- a/scss/pages/_contacto.scss
+++ b/scss/pages/_contacto.scss
@@ -3,7 +3,7 @@
     font-size: 2.5rem;
     text-align: center;
     text-decoration: underline;
-    color: #ff1e00;
+    color: $color-f1;
 }
 
 .cont {
