--- a/scss/pages/_escuderia.scss
+++ b/scss/pages/_escuderia.scss
@@ -1,9 +1,9 @@
 .escuderia__titu--principal {
     font-size: 2.5rem;
     text-align: center;
-    font-family: 'Formula', sans-serif;
+    font-family: $fuente-f1;
     text-decoration: underline;
-    color: #ff1e00
+    color: $color-f1
 }
 
 .escu {
