--- a/scss/pages/_tabla.scss
+++ b/scss/pages/_tabla.scss
@@ -2,17 +2,17 @@
     &__principal {
         font-size: 2.5rem;
         text-align: center;
-        font-family: 'Formula', sans-serif;
+        font-family: $fuente-f1;
         text-decoration: underline;
-        color: #ff1e00
+        color: $color-f1
     }
 
     &__secundario {
         font-size: 2rem;
         text-align: center;
-        font-family: 'Formula', sans-serif;
+        font-family: $fuente-f1;
         text-decoration: underline;
-        color: #ff1e00;
+        color: $color-f1;
         padding-top: 2rem;
         padding-bottom: 5rem;
 
