--- a/css/style.css
+++ b/css/style.css
@@ -252,7 +252,9 @@ a:active {
 }
 .noticia__titu--principal {
   font-size: 2.5rem;
+  font-family: "Formula", sans-serif;
   text-decoration: underline;
+  text-align: center;
   color: #ff1e00;
 }
 .noticia__box {
