--- a/scss/components/_noticia.scss
+++ b/scss/components/_noticia.scss
@@ -4,6 +4,7 @@
         font-size: 2.5rem;
         font-family: $fuente-f1;
     text-decoration: underline;
+    text-align: center;
     color: $color-f1;
     
     }
